Tweaks to caption and thumbnail styling; removed extraneous captions; fixed collapsing

--- a/wedding/main/static/css/style.css
+++ b/wedding/main/static/css/style.css
@@ -11,7 +11,9 @@ body {
 a { color: #f0B435; font-weight: bold; text-shadow: 1px 1px 1px rgba(0,0,0,0.5); }
 a:hover { color: #b4f035; text-decoration: none; }
 
-a.thumbnail small { font-size: 50%; color: #444; }
+a.thumbnail { background-color: transparent; border: none; box-shadow: none; }
+a.thumbnail img { border: solid 1px #ccc; border-radius: 3px; box-shadow: 1px 1px 1px rgba(0,0,0,0.5); }
+a.thumbnail small { font-size: 50%; color: #333; position: relative; top: -10px; }
 
 a, strong { font-family: "Candal", Arial, sans-serif; font-weight: normal; }
 
@@ -100,6 +102,8 @@ section ul li { margin-bottom: 0.5em; }
     font-family: "Candal", sans-serif;
     font-weight: normal;
 }
+
+#intro small { font-size: 35%; top: -30px; }
 
 #begin {
     margin-bottom: 400px;
